# generative-ai

./: .env.example  .gitignore  README.md  helper_functions.py  lcel.py  pyproject.toml  setup.py
ai_code_generator/: README.md  main.py
deep dive/: design_patterns.ipynb
design_patterns/: factory_llm.py  factory_notification.py
llm mastery/notebooks/: generative_ai.ipynb
llm mastery/notebooks/wandb/: latest-run
mongodb/atlas_vector_search/quickstart/: 01_quickstart.ipynb
mongodb/notebook/: 03_large_language_models.ipynb  04_1_semantic_search.ipynb  04_embedding_model.ipynb  07-frameworks-libraries.ipynb  08-vector-search.ipynb  create_index.py  embed_docx.ipynb  embed_docx.py  pipeline.ipynb  pipeline.py  pipeline_research.ipynb
mongodb/src/: 04_semantic_search.py
notebooks/: Langchain_Pipecone (1).ipynb  Langchain_Pipecone.ipynb  lcel.ipynb  subrata_advanced_rag.ipynb  subrata_rag_RAPTOR.ipynb  subrata_rag_qa.ipynb
pytorch/: concurrency.ipynb  hpc.py  parallel_processing.ipynb
pytorch/notebooks/: hpc.ipynb  pdf editor.ipynb  pdf.ipynb  pytorch.ipynb
pytorch/notebooks/linear regression/: linear_regression.ipynb
pytorch/notebooks/models/: linear_Regression_model.pth
rag/notebook/: 00_intro.ipynb  01_caching.ipynb  02_tracing.ipynb  03_tracing_plus_caching.ipynb  04_retrying.ipynb  05_caching_plus_retrying.ipynb  06_structured_output.ipynb
src/: agents.py  apis.py  basics.py  chat_models.py  pinecone.py  prompt_template.py  simple_chains.py  simple_llm.py  simple_sequential_chains.py
(+2 files in other folders)
