[tool.poetry]
name = "generative-ai"
version = "0.1.0"
description = ""
authors = ["Subrata Mondal <subratasubha2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.37.1"
langchain = "^0.2.11"
pinecone-client = "^5.0.0"
python-dotenv = "^1.0.1"
tiktoken = "^0.7.0"
langchain-community = "^0.2.10"
pymupdf = "^1.24.9"
rank-bm25 = "^0.2.2"
langchain-core = "^0.2.28"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
